Fix CORS and secure DB credentials